--- a/Lab2/Lab2b/FPALU/FPALU.qsf
+++ b/Lab2/Lab2b/FPALU/FPALU.qsf
@@ -38,7 +38,7 @@
 
 set_global_assignment -name FAMILY "Cyclone II"
 set_global_assignment -name DEVICE EP2C70F896C6
-set_global_assignment -name TOP_LEVEL_ENTITY FPALU
+set_global_assignment -name TOP_LEVEL_ENTITY TopDE
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 9.1
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "20:22:49  OCTOBER 15, 2014"
 set_global_assignment -name LAST_QUARTUS_VERSION "13.0 SP1"
@@ -599,10 +599,10 @@ set_global_assignment -name VERILOG_FILE FPALU.v
 set_global_assignment -name VERILOG_FILE mul_s.v
 set_global_assignment -name VERILOG_FILE sqrt_s.v
 set_global_assignment -name VERILOG_FILE TopDE.v
+set_global_assignment -name INCREMENTAL_VECTOR_INPUT_SOURCE "C:/Users/lamar/Documents/Meus_documentos/kiko/Disciplinas/UnB/OAC/2015-2/Lab2/Files/FPALU/FPALU.vwf"
 set_global_assignment -name LL_ROOT_REGION ON -section_id "Root Region"
 set_global_assignment -name LL_MEMBER_STATE LOCKED -section_id "Root Region"
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
-set_global_assignment -name INCREMENTAL_VECTOR_INPUT_SOURCE "C:/Users/lamar/Documents/Meus_documentos/kiko/Disciplinas/UnB/OAC/2015-2/Lab2/Files/FPALU/FPALU.vwf"
