--- a/Processors/MIPS-PUM-v3.3/Core/TopDE.qsf
+++ b/Processors/MIPS-PUM-v3.3/Core/TopDE.qsf
@@ -722,4 +722,17 @@ set_global_assignment -name VECTOR_WAVEFORM_FILE Testes/TopDEn.vwf
 set_global_assignment -name VECTOR_WAVEFORM_FILE Testes/TopDEm.vwf
 set_global_assignment -name VECTOR_WAVEFORM_FILE Testes/TopDE2.vwf
 set_global_assignment -name VERILOG_FILE Memoria/SRAM2_Interface.v
+set_global_assignment -name CYCLONEII_OPTIMIZATION_TECHNIQUE SPEED
+set_global_assignment -name PHYSICAL_SYNTHESIS_COMBO_LOGIC ON
+set_global_assignment -name PHYSICAL_SYNTHESIS_REGISTER_DUPLICATION ON
+set_global_assignment -name PHYSICAL_SYNTHESIS_REGISTER_RETIMING ON
+set_global_assignment -name ROUTER_TIMING_OPTIMIZATION_LEVEL MAXIMUM
+set_global_assignment -name AUTO_PACKED_REGISTERS_STRATIXII NORMAL
+set_global_assignment -name SMART_RECOMPILE ON
+set_global_assignment -name ENABLE_DRC_SETTINGS ON
+set_global_assignment -name FITTER_EFFORT "STANDARD FIT"
+set_global_assignment -name SYNTH_TIMING_DRIVEN_SYNTHESIS ON
+set_global_assignment -name ADV_NETLIST_OPT_SYNTH_WYSIWYG_REMAP ON
+set_global_assignment -name MUX_RESTRUCTURE OFF
+set_global_assignment -name OPTIMIZE_HOLD_TIMING "ALL PATHS"
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
