--- a/Processors/MIPS-PUM-v3.3/Core/TopDE.qsf
+++ b/Processors/MIPS-PUM-v3.3/Core/TopDE.qsf
@@ -735,4 +735,8 @@ set_global_assignment -name SYNTH_TIMING_DRIVEN_SYNTHESIS ON
 set_global_assignment -name ADV_NETLIST_OPT_SYNTH_WYSIWYG_REMAP ON
 set_global_assignment -name MUX_RESTRUCTURE OFF
 set_global_assignment -name OPTIMIZE_HOLD_TIMING "ALL PATHS"
+set_global_assignment -name AUTO_SHIFT_REGISTER_RECOGNITION ALWAYS
+set_global_assignment -name ALLOW_SHIFT_REGISTER_MERGING_ACROSS_HIERARCHIES ALWAYS
+set_global_assignment -name OPTIMIZE_MULTI_CORNER_TIMING ON
+set_global_assignment -name PLACEMENT_EFFORT_MULTIPLIER 2.0
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
