Correções no cartão SD [Não testadas]

--- a/Processors/MIPS-PUM-v4.2/Core/TopDE-FastCompilation.qsf
+++ b/Processors/MIPS-PUM-v4.2/Core/TopDE-FastCompilation.qsf
@@ -614,132 +614,6 @@ set_global_assignment -name SLD_NODE_PARAMETER_ASSIGNMENT "SLD_ENABLE_ADVANCED_T
 set_instance_assignment -name CONNECT_TO_SLD_NODE_ENTITY_PORT acq_trigger_in[0] -to iKEY[3] -section_id auto_signaltap_0
 set_instance_assignment -name POST_FIT_CONNECT_TO_SLD_NODE_ENTITY_PORT acq_trigger_in[1] -to iKEY[0] -section_id auto_signaltap_0
 set_global_assignment -name SLD_NODE_PARAMETER_ASSIGNMENT "SLD_TRIGGER_BITS=2" -section_id auto_signaltap_0
-set_global_assignment -name VERILOG_FILE TopDE.v
-set_global_assignment -name VERILOG_FILE Parametros.v
-set_global_assignment -name VERILOG_FILE CPU/CPU.v
-set_global_assignment -name VERILOG_FILE CPU/Datapath_UNI.v
-set_global_assignment -name VERILOG_FILE CPU/Datapath_MULTI.v
-set_global_assignment -name VERILOG_FILE CPU/Datapath_PIPEM.v
-set_global_assignment -name VERILOG_FILE CPU/Control_UNI.v
-set_global_assignment -name VERILOG_FILE CPU/Control_MULTI.v
-set_global_assignment -name VERILOG_FILE CPU/Control_PIPEM.v
-set_global_assignment -name VERILOG_FILE CPU/ForwardUnitM.v
-set_global_assignment -name VERILOG_FILE CPU/HazardUnitM.v
-set_global_assignment -name VERILOG_FILE CPU/Registers.v
-set_global_assignment -name VERILOG_FILE CPU/ALU.v
-set_global_assignment -name VERILOG_FILE CPU/ALUControl.v
-set_global_assignment -name VERILOG_FILE Cop0/COP0RegistersUNI.v
-set_global_assignment -name VERILOG_FILE Cop0/COP0RegistersMULTI.v
-set_global_assignment -name VERILOG_FILE Cop1/ula_fp.v
-set_global_assignment -name VERILOG_FILE Cop1/sqrt_s.v
-set_global_assignment -name VERILOG_FILE Cop1/mul_s.v
-set_global_assignment -name VERILOG_FILE Cop1/FPURegisters.v
-set_global_assignment -name VERILOG_FILE Cop1/FPALUControl.v
-set_global_assignment -name VERILOG_FILE Cop1/FlagBank.v
-set_global_assignment -name VERILOG_FILE Cop1/div_s.v
-set_global_assignment -name VERILOG_FILE Cop1/cvt_w_s.v
-set_global_assignment -name VERILOG_FILE Cop1/cvt_s_w.v
-set_global_assignment -name VERILOG_FILE Cop1/c_lt_s.v
-set_global_assignment -name VERILOG_FILE Cop1/c_le_s.v
-set_global_assignment -name VERILOG_FILE Cop1/c_eq_s.v
-set_global_assignment -name VERILOG_FILE Cop1/add_sub.v
-set_global_assignment -name VERILOG_FILE Cop1/abs_s.v
-set_global_assignment -name QIP_FILE Cop1/sqrt_s.qip
-set_global_assignment -name QIP_FILE Cop1/mul_s.qip
-set_global_assignment -name QIP_FILE Cop1/div_s.qip
-set_global_assignment -name QIP_FILE Cop1/cvt_w_s.qip
-set_global_assignment -name QIP_FILE Cop1/cvt_s_w.qip
-set_global_assignment -name QIP_FILE Cop1/c_lt_s.qip
-set_global_assignment -name QIP_FILE Cop1/c_le_s.qip
-set_global_assignment -name QIP_FILE Cop1/c_eq_s.qip
-set_global_assignment -name QIP_FILE Cop1/add_sub.qip
-set_global_assignment -name QIP_FILE Cop1/abs_s.qip
-set_global_assignment -name SOURCE_FILE Cop1/ula_fp.v.bak
-set_global_assignment -name VERILOG_FILE Tempo/CLOCK_Interface.v
-set_global_assignment -name VERILOG_FILE Tempo/Timer.v
-set_global_assignment -name VERILOG_FILE Tempo/reset_delay.v
-set_global_assignment -name VERILOG_FILE Tempo/PLL_teste.v
-set_global_assignment -name QIP_FILE Tempo/PLL.qip
-set_global_assignment -name VERILOG_FILE Tempo/PLL.v
-set_global_assignment -name VERILOG_FILE Tempo/oneshot.v
-set_global_assignment -name VERILOG_FILE Tempo/mono.v
-set_global_assignment -name VERILOG_FILE Memoria/Memory_Interface.v
-set_global_assignment -name VERILOG_FILE Memoria/CodeMemory_Interface.v
-set_global_assignment -name VERILOG_FILE Memoria/DataMemory_Interface.v
-set_global_assignment -name VERILOG_FILE Memoria/SRAM_Interface.v
-set_global_assignment -name VERILOG_FILE Memoria/MemLoad.v
-set_global_assignment -name VERILOG_FILE Memoria/MemStore.v
-set_global_assignment -name VERILOG_FILE Memoria/UserDataBlock.v
-set_global_assignment -name VERILOG_FILE Memoria/UserCodeBlock.v
-set_global_assignment -name VERILOG_FILE Memoria/SysDataBlock.v
-set_global_assignment -name VERILOG_FILE Memoria/SysCodeBlock.v
-set_global_assignment -name VERILOG_FILE Memoria/BootBlock.v
-set_global_assignment -name VERILOG_FILE Memoria/UserDataBlockDouble.v
-set_global_assignment -name QIP_FILE Memoria/UserDataBlockDouble.qip
-set_global_assignment -name QIP_FILE Memoria/UserDataBlock.qip
-set_global_assignment -name QIP_FILE Memoria/UserCodeBlock.qip
-set_global_assignment -name QIP_FILE Memoria/SysDataBlock.qip
-set_global_assignment -name QIP_FILE Memoria/SysCodeBlock.qip
-set_global_assignment -name QIP_FILE Memoria/BootBlock.qip
-set_global_assignment -name VERILOG_FILE VGA/VGA_Interface.v
-set_global_assignment -name VERILOG_FILE VGA/RegDisplay.v
-set_global_assignment -name VERILOG_FILE VGA/HexFont.v
-set_global_assignment -name VERILOG_FILE VGA/VgaPll.v
-set_global_assignment -name QIP_FILE VGA/VgaPll.qip
-set_global_assignment -name SOURCE_FILE VGA/VgaPll.ppf
-set_global_assignment -name VERILOG_FILE VGA/VgaAdapter.v
-set_global_assignment -name VERILOG_FILE VGA/VGA_Audio_PLL.v
-set_global_assignment -name QIP_FILE VGA/MemoryVGA.qip
-set_global_assignment -name VERILOG_FILE VGA/MemoryVGA.v
-set_global_assignment -name MIF_FILE VGA/display.mif
-set_global_assignment -name VERILOG_FILE Sintetizador/Sintetizador_Interface.v
-set_global_assignment -name VERILOG_FILE Sintetizador/Sintetizador.v
-set_global_assignment -name VERILOG_FILE Sintetizador/SineTable.v
-set_global_assignment -name VERILOG_FILE Sintetizador/NoteTable.v
-set_global_assignment -name SYSTEMVERILOG_FILE Sintetizador/Synthesizer.sv
-set_global_assignment -name SYSTEMVERILOG_FILE Sintetizador/SineCalculator.sv
-set_global_assignment -name SYSTEMVERILOG_FILE Sintetizador/Oscillator.sv
-set_global_assignment -name SYSTEMVERILOG_FILE Sintetizador/Note.sv
-set_global_assignment -name SYSTEMVERILOG_FILE Sintetizador/Filter.sv
-set_global_assignment -name SYSTEMVERILOG_FILE Sintetizador/Envelope.sv
-set_global_assignment -name SYSTEMVERILOG_FILE Sintetizador/Channel.sv
-set_global_assignment -name MIF_FILE Sintetizador/sine.mif
-set_global_assignment -name MIF_FILE Sintetizador/notes.mif
-set_global_assignment -name SYSTEMVERILOG_FILE Sintetizador/SyscallSynthControl.sv
-set_global_assignment -name VERILOG_FILE Sintetizador/SynthControl.v
-set_global_assignment -name VERILOG_FILE RS232/RS232_Interface.v
-set_global_assignment -name VERILOG_FILE RS232/async.v
-set_global_assignment -name VERILOG_FILE PS2/TecladoPS2_Interface.v
-set_global_assignment -name VERILOG_FILE PS2/MousePS2_Interface.v
-set_global_assignment -name VERILOG_FILE PS2/tecladoPS2.v
-set_global_assignment -name VERILOG_FILE PS2/PS2_Controller.v
-set_global_assignment -name VERILOG_FILE PS2/mouse_hugo.v
-set_global_assignment -name VERILOG_FILE PS2/keyboard.v
-set_global_assignment -name VERILOG_FILE PS2/Altera_UP_PS2_Data_In.v
-set_global_assignment -name VERILOG_FILE PS2/Altera_UP_PS2_Command_Out.v
-set_global_assignment -name VERILOG_FILE LCD/LCD_Interface.v
-set_global_assignment -name VERILOG_FILE LCD/LCDStateMachine.v
-set_global_assignment -name VERILOG_FILE LCD/LCDController.v
-set_global_assignment -name VERILOG_FILE Display7/Display7_Interface.v
-set_global_assignment -name VERILOG_FILE Display7/decoder7.v
-set_global_assignment -name VHDL_FILE CartaoSD/sd_controller.vhd
-set_global_assignment -name VERILOG_FILE CartaoSD/spi_interface.v
-set_global_assignment -name VERILOG_FILE AudioCODEC/AudioCODEC_Interface.v
-set_global_assignment -name VERILOG_FILE AudioCODEC/I2C_Controller.v
-set_global_assignment -name VERILOG_FILE AudioCODEC/I2C_AV_Config.v
-set_global_assignment -name VERILOG_FILE AudioCODEC/audio_converter.v
-set_global_assignment -name VERILOG_FILE AudioCODEC/audio_clock.v
-set_global_assignment -name VECTOR_WAVEFORM_FILE Testes/TopDE.vwf
-set_global_assignment -name VECTOR_WAVEFORM_FILE Testes/CPU.vwf
-set_global_assignment -name VECTOR_WAVEFORM_FILE Testes/CLOCK.vwf
-set_global_assignment -name SDC_FILE TopDE.out.sdc
-set_global_assignment -name VECTOR_WAVEFORM_FILE Testes/CPUn.vwf
-set_global_assignment -name VECTOR_WAVEFORM_FILE Testes/TopDEn.vwf
-set_global_assignment -name VECTOR_WAVEFORM_FILE Testes/TopDEm.vwf
-set_global_assignment -name VECTOR_WAVEFORM_FILE Testes/TopDE2.vwf
-set_global_assignment -name SIGNALTAP_FILE Testes/stp1.stp
-set_global_assignment -name CDF_FILE output_files/Chain1.cdf
-set_global_assignment -name CDF_FILE output_files/Chain2.cdf
 set_instance_assignment -name CONNECT_TO_SLD_NODE_ENTITY_PORT acq_clk -to OCLK200 -section_id auto_signaltap_0
 set_instance_assignment -name CONNECT_TO_SLD_NODE_ENTITY_PORT acq_data_in[0] -to "CPU:CPU0|Datapath_MULTI:Processor|Control_MULTI:CrlMULTI|pr_state.BEQ" -section_id auto_signaltap_0
 set_instance_assignment -name CONNECT_TO_SLD_NODE_ENTITY_PORT acq_data_in[1] -to "CPU:CPU0|Datapath_MULTI:Processor|Control_MULTI:CrlMULTI|pr_state.BNE" -section_id auto_signaltap_0
@@ -1028,5 +902,132 @@ set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_RO
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name INCREMENTAL_VECTOR_INPUT_SOURCE "C:/Users/lamar/Dropbox/kiko/Disciplinas/UnB/OAC/2016-1/MIPS-PUM-v4.1/Core/Testes/TopDE2.vwf"
 set_global_assignment -name SLD_NODE_PARAMETER_ASSIGNMENT "SLD_ADVANCED_TRIGGER_ENTITY=sld_reserved_TopDE_FastCompilation_auto_signaltap_0_1_4bd8," -section_id auto_signaltap_0
-set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name VERILOG_FILE TopDE.v
+set_global_assignment -name VERILOG_FILE Parametros.v
+set_global_assignment -name VERILOG_FILE CPU/CPU.v
+set_global_assignment -name VERILOG_FILE CPU/Datapath_UNI.v
+set_global_assignment -name VERILOG_FILE CPU/Datapath_MULTI.v
+set_global_assignment -name VERILOG_FILE CPU/Datapath_PIPEM.v
+set_global_assignment -name VERILOG_FILE CPU/Control_UNI.v
+set_global_assignment -name VERILOG_FILE CPU/Control_MULTI.v
+set_global_assignment -name VERILOG_FILE CPU/Control_PIPEM.v
+set_global_assignment -name VERILOG_FILE CPU/ForwardUnitM.v
+set_global_assignment -name VERILOG_FILE CPU/HazardUnitM.v
+set_global_assignment -name VERILOG_FILE CPU/Registers.v
+set_global_assignment -name VERILOG_FILE CPU/ALU.v
+set_global_assignment -name VERILOG_FILE CPU/ALUControl.v
+set_global_assignment -name VERILOG_FILE Cop0/COP0RegistersUNI.v
+set_global_assignment -name VERILOG_FILE Cop0/COP0RegistersMULTI.v
+set_global_assignment -name VERILOG_FILE Cop1/ula_fp.v
+set_global_assignment -name VERILOG_FILE Cop1/sqrt_s.v
+set_global_assignment -name VERILOG_FILE Cop1/mul_s.v
+set_global_assignment -name VERILOG_FILE Cop1/FPURegisters.v
+set_global_assignment -name VERILOG_FILE Cop1/FPALUControl.v
+set_global_assignment -name VERILOG_FILE Cop1/FlagBank.v
+set_global_assignment -name VERILOG_FILE Cop1/div_s.v
+set_global_assignment -name VERILOG_FILE Cop1/cvt_w_s.v
+set_global_assignment -name VERILOG_FILE Cop1/cvt_s_w.v
+set_global_assignment -name VERILOG_FILE Cop1/c_lt_s.v
+set_global_assignment -name VERILOG_FILE Cop1/c_le_s.v
+set_global_assignment -name VERILOG_FILE Cop1/c_eq_s.v
+set_global_assignment -name VERILOG_FILE Cop1/add_sub.v
+set_global_assignment -name VERILOG_FILE Cop1/abs_s.v
+set_global_assignment -name QIP_FILE Cop1/sqrt_s.qip
+set_global_assignment -name QIP_FILE Cop1/mul_s.qip
+set_global_assignment -name QIP_FILE Cop1/div_s.qip
+set_global_assignment -name QIP_FILE Cop1/cvt_w_s.qip
+set_global_assignment -name QIP_FILE Cop1/cvt_s_w.qip
+set_global_assignment -name QIP_FILE Cop1/c_lt_s.qip
+set_global_assignment -name QIP_FILE Cop1/c_le_s.qip
+set_global_assignment -name QIP_FILE Cop1/c_eq_s.qip
+set_global_assignment -name QIP_FILE Cop1/add_sub.qip
+set_global_assignment -name QIP_FILE Cop1/abs_s.qip
+set_global_assignment -name SOURCE_FILE Cop1/ula_fp.v.bak
+set_global_assignment -name VERILOG_FILE Tempo/CLOCK_Interface.v
+set_global_assignment -name VERILOG_FILE Tempo/Timer.v
+set_global_assignment -name VERILOG_FILE Tempo/reset_delay.v
+set_global_assignment -name VERILOG_FILE Tempo/PLL_teste.v
+set_global_assignment -name QIP_FILE Tempo/PLL.qip
+set_global_assignment -name VERILOG_FILE Tempo/PLL.v
+set_global_assignment -name VERILOG_FILE Tempo/oneshot.v
+set_global_assignment -name VERILOG_FILE Tempo/mono.v
+set_global_assignment -name VERILOG_FILE Memoria/Memory_Interface.v
+set_global_assignment -name VERILOG_FILE Memoria/CodeMemory_Interface.v
+set_global_assignment -name VERILOG_FILE Memoria/DataMemory_Interface.v
+set_global_assignment -name VERILOG_FILE Memoria/SRAM_Interface.v
+set_global_assignment -name VERILOG_FILE Memoria/MemLoad.v
+set_global_assignment -name VERILOG_FILE Memoria/MemStore.v
+set_global_assignment -name VERILOG_FILE Memoria/UserDataBlock.v
+set_global_assignment -name VERILOG_FILE Memoria/UserCodeBlock.v
+set_global_assignment -name VERILOG_FILE Memoria/SysDataBlock.v
+set_global_assignment -name VERILOG_FILE Memoria/SysCodeBlock.v
+set_global_assignment -name VERILOG_FILE Memoria/BootBlock.v
+set_global_assignment -name VERILOG_FILE Memoria/UserDataBlockDouble.v
+set_global_assignment -name QIP_FILE Memoria/UserDataBlockDouble.qip
+set_global_assignment -name QIP_FILE Memoria/UserDataBlock.qip
+set_global_assignment -name QIP_FILE Memoria/UserCodeBlock.qip
+set_global_assignment -name QIP_FILE Memoria/SysDataBlock.qip
+set_global_assignment -name QIP_FILE Memoria/SysCodeBlock.qip
+set_global_assignment -name QIP_FILE Memoria/BootBlock.qip
+set_global_assignment -name VERILOG_FILE VGA/VGA_Interface.v
+set_global_assignment -name VERILOG_FILE VGA/RegDisplay.v
+set_global_assignment -name VERILOG_FILE VGA/HexFont.v
+set_global_assignment -name VERILOG_FILE VGA/VgaPll.v
+set_global_assignment -name QIP_FILE VGA/VgaPll.qip
+set_global_assignment -name SOURCE_FILE VGA/VgaPll.ppf
+set_global_assignment -name VERILOG_FILE VGA/VgaAdapter.v
+set_global_assignment -name VERILOG_FILE VGA/VGA_Audio_PLL.v
+set_global_assignment -name QIP_FILE VGA/MemoryVGA.qip
+set_global_assignment -name VERILOG_FILE VGA/MemoryVGA.v
+set_global_assignment -name MIF_FILE VGA/display.mif
+set_global_assignment -name VERILOG_FILE Sintetizador/Sintetizador_Interface.v
+set_global_assignment -name VERILOG_FILE Sintetizador/Sintetizador.v
+set_global_assignment -name VERILOG_FILE Sintetizador/SineTable.v
+set_global_assignment -name VERILOG_FILE Sintetizador/NoteTable.v
+set_global_assignment -name SYSTEMVERILOG_FILE Sintetizador/Synthesizer.sv
+set_global_assignment -name SYSTEMVERILOG_FILE Sintetizador/SineCalculator.sv
+set_global_assignment -name SYSTEMVERILOG_FILE Sintetizador/Oscillator.sv
+set_global_assignment -name SYSTEMVERILOG_FILE Sintetizador/Note.sv
+set_global_assignment -name SYSTEMVERILOG_FILE Sintetizador/Filter.sv
+set_global_assignment -name SYSTEMVERILOG_FILE Sintetizador/Envelope.sv
+set_global_assignment -name SYSTEMVERILOG_FILE Sintetizador/Channel.sv
+set_global_assignment -name MIF_FILE Sintetizador/sine.mif
+set_global_assignment -name MIF_FILE Sintetizador/notes.mif
+set_global_assignment -name SYSTEMVERILOG_FILE Sintetizador/SyscallSynthControl.sv
+set_global_assignment -name VERILOG_FILE Sintetizador/SynthControl.v
+set_global_assignment -name VERILOG_FILE RS232/RS232_Interface.v
+set_global_assignment -name VERILOG_FILE RS232/async.v
+set_global_assignment -name VERILOG_FILE PS2/TecladoPS2_Interface.v
+set_global_assignment -name VERILOG_FILE PS2/MousePS2_Interface.v
+set_global_assignment -name VERILOG_FILE PS2/tecladoPS2.v
+set_global_assignment -name VERILOG_FILE PS2/PS2_Controller.v
+set_global_assignment -name VERILOG_FILE PS2/mouse_hugo.v
+set_global_assignment -name VERILOG_FILE PS2/keyboard.v
+set_global_assignment -name VERILOG_FILE PS2/Altera_UP_PS2_Data_In.v
+set_global_assignment -name VERILOG_FILE PS2/Altera_UP_PS2_Command_Out.v
+set_global_assignment -name VERILOG_FILE LCD/LCD_Interface.v
+set_global_assignment -name VERILOG_FILE LCD/LCDStateMachine.v
+set_global_assignment -name VERILOG_FILE LCD/LCDController.v
+set_global_assignment -name VERILOG_FILE Display7/Display7_Interface.v
+set_global_assignment -name VERILOG_FILE Display7/decoder7.v
+set_global_assignment -name VHDL_FILE CartaoSD/clock_divider.vhd
+set_global_assignment -name VHDL_FILE CartaoSD/sd_controller.vhd
+set_global_assignment -name VERILOG_FILE CartaoSD/spi_interface.v
+set_global_assignment -name VERILOG_FILE AudioCODEC/AudioCODEC_Interface.v
+set_global_assignment -name VERILOG_FILE AudioCODEC/I2C_Controller.v
+set_global_assignment -name VERILOG_FILE AudioCODEC/I2C_AV_Config.v
+set_global_assignment -name VERILOG_FILE AudioCODEC/audio_converter.v
+set_global_assignment -name VERILOG_FILE AudioCODEC/audio_clock.v
+set_global_assignment -name VECTOR_WAVEFORM_FILE Testes/TopDE.vwf
+set_global_assignment -name VECTOR_WAVEFORM_FILE Testes/CPU.vwf
+set_global_assignment -name VECTOR_WAVEFORM_FILE Testes/CLOCK.vwf
+set_global_assignment -name SDC_FILE TopDE.out.sdc
+set_global_assignment -name VECTOR_WAVEFORM_FILE Testes/CPUn.vwf
+set_global_assignment -name VECTOR_WAVEFORM_FILE Testes/TopDEn.vwf
+set_global_assignment -name VECTOR_WAVEFORM_FILE Testes/TopDEm.vwf
+set_global_assignment -name VECTOR_WAVEFORM_FILE Testes/TopDE2.vwf
+set_global_assignment -name SIGNALTAP_FILE Testes/stp1.stp
+set_global_assignment -name CDF_FILE output_files/Chain1.cdf
+set_global_assignment -name CDF_FILE output_files/Chain2.cdf
 set_global_assignment -name SLD_FILE "C:/Users/Arthur/Documents/GitHub/LabsOAC/Processors/MIPS-PUM-v4.2/Core/Testes/stp1_auto_stripped.stp"
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
