--- a/Processors/MIPS-PUM-v4.2/Core/TopDE-FastCompilation.qsf
+++ b/Processors/MIPS-PUM-v4.2/Core/TopDE-FastCompilation.qsf
@@ -1010,9 +1010,9 @@ set_global_assignment -name VERILOG_FILE LCD/LCDStateMachine.v
 set_global_assignment -name VERILOG_FILE LCD/LCDController.v
 set_global_assignment -name VERILOG_FILE Display7/Display7_Interface.v
 set_global_assignment -name VERILOG_FILE Display7/decoder7.v
-set_global_assignment -name VHDL_FILE CartaoSD/clock_divider.vhd
 set_global_assignment -name VHDL_FILE CartaoSD/sd_controller.vhd
 set_global_assignment -name VERILOG_FILE CartaoSD/spi_interface.v
+set_global_assignment -name VERILOG_FILE CartaoSD/clk_div.v
 set_global_assignment -name VERILOG_FILE AudioCODEC/AudioCODEC_Interface.v
 set_global_assignment -name VERILOG_FILE AudioCODEC/I2C_Controller.v
 set_global_assignment -name VERILOG_FILE AudioCODEC/I2C_AV_Config.v
@@ -1029,5 +1029,5 @@ set_global_assignment -name VECTOR_WAVEFORM_FILE Testes/TopDE2.vwf
 set_global_assignment -name SIGNALTAP_FILE Testes/stp1.stp
 set_global_assignment -name CDF_FILE output_files/Chain1.cdf
 set_global_assignment -name CDF_FILE output_files/Chain2.cdf
-set_global_assignment -name SLD_FILE "C:/Users/Arthur/Documents/GitHub/LabsOAC/Processors/MIPS-PUM-v4.2/Core/Testes/stp1_auto_stripped.stp"
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name SLD_FILE "C:/Users/Arthur/Documents/GitHub/LabsOAC/Processors/MIPS-PUM-v4.2/Core/Testes/stp1_auto_stripped.stp"
