--- a/Processors/MIPS-PUM-v4.3/Core/TopDE.qsf
+++ b/Processors/MIPS-PUM-v4.3/Core/TopDE.qsf
@@ -742,4 +742,5 @@ set_global_assignment -name VECTOR_WAVEFORM_FILE Testes/TopDE2.vwf
 set_global_assignment -name SIGNALTAP_FILE Testes/stp1.stp
 set_global_assignment -name CDF_FILE output_files/Chain1.cdf
 set_global_assignment -name CDF_FILE output_files/Chain2.cdf
+set_global_assignment -name VERILOG_FILE CPU/Branch_PIPEM.v
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
